# ImpactForge

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  README_ZH_TW.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
impactforge/: __init__.py  __main__.py  cli.py  git_parser.py  impact_analyzer.py  reporter.py  tui.py  visualizer.py
tests/: __init__.py  test_git_parser.py  test_impact_analyzer.py  test_reporter.py  test_visualizer.py
